// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadAssetDialog from computer snapshots the component 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c14 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  padding-right: 40px;
  padding-left: 40px;
  position: fixed;
  z-index: 4;
}

.c5 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c7 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c15 {
  padding-top: 24px;
  padding-right: 40px;
  padding-left: 40px;
}

.c17 {
  padding: 16px;
}

.c22 {
  background: #eaeaef;
}

.c24 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c25 {
  background: #f6f6f9;
  padding-top: 64px;
  padding-bottom: 64px;
  border-radius: 4px;
  border-color: #c0c0cf;
  border: 1px solid #c0c0cf;
  position: relative;
}

.c30 {
  padding-top: 12px;
  padding-bottom: 20px;
}

.c32 {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 1;
  width: 100%;
}

.c34 {
  position: relative;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c11 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c19 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #4945ff;
}

.c21 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #666687;
}

.c31 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #666687;
}

.c36 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c12 svg {
  height: 12px;
  width: 12px;
}

.c12 svg > g,
.c12 svg path {
  fill: #ffffff;
}

.c12[aria-disabled='true'] {
  pointer-events: none;
}

.c12:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c12:focus-visible {
  outline: none;
}

.c12:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c35 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c35 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 .c10 {
  color: #ffffff;
}

.c35[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c35[aria-disabled='true'] .c10 {
  color: #666687;
}

.c35[aria-disabled='true'] svg > g,.c35[aria-disabled='true'] svg path {
  fill: #666687;
}

.c35[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c35[aria-disabled='true']:active .c10 {
  color: #666687;
}

.c35[aria-disabled='true']:active svg > g,.c35[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c35:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c35:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c35 svg > g,
.c35 svg path {
  fill: #ffffff;
}

.c39 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c39 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c39 .c10 {
  color: #ffffff;
}

.c39[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c39[aria-disabled='true'] .c10 {
  color: #666687;
}

.c39[aria-disabled='true'] svg > g,.c39[aria-disabled='true'] svg path {
  fill: #666687;
}

.c39[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c39[aria-disabled='true']:active .c10 {
  color: #666687;
}

.c39[aria-disabled='true']:active svg > g,.c39[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c39:hover {
  background-color: #f6f6f9;
}

.c39:active {
  background-color: #eaeaef;
}

.c39 .c10 {
  color: #32324d;
}

.c39 svg > g,
.c39 svg path {
  fill: #32324d;
}

.c23 {
  height: 1px;
  border: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c13 svg > g,
.c13 svg path {
  fill: #8e8ea9;
}

.c13:hover svg > g,
.c13:hover svg path {
  fill: #666687;
}

.c13:active svg > g,
.c13:active svg path {
  fill: #a5a5ba;
}

.c13[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c13[aria-disabled='true'] svg path {
  fill: #666687;
}

.c4 {
  inset: 0;
  background: #32324d1F;
}

.c6 {
  width: 51.875rem;
}

.c8 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c37 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c38 > * + * {
  margin-left: 8px;
}

.c18 {
  border-bottom: 2px solid #4945ff;
}

.c20 {
  border-bottom: 2px solid transparent;
}

.c16[aria-disabled='true'] {
  cursor: not-allowed;
}

.c28 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c29 {
  font-size: 3.75rem;
}

.c29 svg path {
  fill: #4945ff;
}

.c26 {
  border-style: dashed;
}

.c33 {
  opacity: 0;
  cursor: pointer;
}

<body
  class="lock-body-scroll"
>
  <div>
    <div
      class="c0"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </div>
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c1 c2 c3 c4"
    >
      <div>
        <div>
          <div
            aria-labelledby="title"
            aria-modal="true"
            class="c1 c5 c6"
            role="dialog"
          >
            <div
              class="c1 c7 c8"
            >
              <div
                class="c1 c9"
              >
                <h2
                  class="c10 c11"
                  id="title"
                >
                  Add new assets
                </h2>
                <button
                  aria-disabled="false"
                  class="c12 c13"
                  type="button"
                >
                  <span
                    class="c14"
                  >
                    Close the modal
                  </span>
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 2.417L21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417z"
                      fill="#212134"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div>
              <div
                class="c1 c15"
              >
                <div
                  aria-label="How do you want to upload your assets?"
                  role="tablist"
                >
                  <button
                    aria-controls="0-0-tabpanel"
                    aria-disabled="false"
                    aria-selected="true"
                    class="c16"
                    id="0-0-tab"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c1 c17 c18"
                    >
                      <span
                        class="c10 c19"
                      >
                        From computer
                      </span>
                    </div>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-selected="false"
                    class="c16"
                    id="0-1-tab"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="c1 c17 c20"
                    >
                      <span
                        class="c10 c21"
                      >
                        From url
                      </span>
                    </div>
                  </button>
                </div>
                <hr
                  class="c1 c22 c23"
                />
              </div>
              <div>
                <div
                  aria-labelledby="0-0-tab"
                  id="0-0-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <form>
                    <div
                      class="c1 c24"
                    >
                      <label>
                        <div
                          class="c1 c25 c26"
                        >
                          <div
                            class="c1 c3"
                          >
                            <div
                              class="c1 c27 c28"
                            >
                              <div
                                class="c29"
                              >
                                <svg
                                  aria-hidden="true"
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 24 20"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M21.569 2.398H7.829v1.586h13.74c.47 0 .826.5.826 1.094v9.853l-2.791-3.17a2.13 2.13 0 00-.74-.55 2.214 2.214 0 00-.912-.196 2.215 2.215 0 00-.912.191 2.131 2.131 0 00-.74.546l-2.93 3.385-2.973-3.36a2.147 2.147 0 00-.741-.545 2.228 2.228 0 00-1.824.007c-.286.13-.538.319-.739.553l-2.931 3.432V7.653H2.51v9.894c.023.153.06.304.108.452v.127l.041.095c.057.142.126.28.207.412l.099.15c.074.107.157.207.247.302l.124.119c.13.118.275.222.43.309h.024c.36.214.775.327 1.198.325h16.515c.36-.004.716-.085 1.039-.24.323-.153.606-.375.827-.648a2.78 2.78 0 00.504-.888c.066-.217.108-.44.124-.666V5.078a2.497 2.497 0 00-.652-1.81 2.706 2.706 0 00-1.776-.87z"
                                    fill="#32324D"
                                  />
                                  <path
                                    d="M12.552 9.199c.912 0 1.651-.71 1.651-1.585 0-.876-.74-1.586-1.651-1.586-.912 0-1.652.71-1.652 1.586 0 .875.74 1.585 1.652 1.585zM3.303 6.408h.826V3.997h2.477v-.793-.793H4.129V0h-.826c-.219 0-.85.002-.826 0v2.411H0v1.586h2.477v2.41h.826z"
                                    fill="#32324D"
                                  />
                                </svg>
                              </div>
                              <div
                                class="c1 c30"
                              >
                                <span
                                  class="c10 c31"
                                >
                                  Drag & Drop here or
                                </span>
                              </div>
                              <input
                                class="c1 c32 c33"
                                multiple=""
                                name="files"
                                tabindex="-1"
                                type="file"
                                width="100%"
                              />
                              <div
                                class="c1 c34"
                              >
                                <button
                                  aria-disabled="false"
                                  class="c12 c35"
                                  type="button"
                                >
                                  <span
                                    class="c10 c36"
                                  >
                                    Browse files
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="c1 c7 c37"
                    >
                      <div
                        class="c1 c9"
                      >
                        <div
                          class="c1 c27 c38"
                        >
                          <button
                            aria-disabled="false"
                            class="c12 c39"
                            type="button"
                          >
                            <span
                              class="c10 c36"
                            >
                              app.components.Button.cancel
                            </span>
                          </button>
                        </div>
                        <div
                          class="c1 c27 c38"
                        />
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UploadAssetDialog from url snapshots the component 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c14 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  padding-right: 40px;
  padding-left: 40px;
  position: fixed;
  z-index: 4;
}

.c5 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c7 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c15 {
  padding-top: 24px;
  padding-right: 40px;
  padding-left: 40px;
}

.c17 {
  padding: 16px;
}

.c22 {
  background: #eaeaef;
}

.c24 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c28 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c26 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c11 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c21 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #4945ff;
}

.c19 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
  color: #666687;
}

.c29 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c32 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c27 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c27 > * + * {
  margin-top: 4px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c12 svg {
  height: 12px;
  width: 12px;
}

.c12 svg > g,
.c12 svg path {
  fill: #ffffff;
}

.c12[aria-disabled='true'] {
  pointer-events: none;
}

.c12:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c12:focus-visible {
  outline: none;
}

.c12:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c36 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c36 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36 .c10 {
  color: #ffffff;
}

.c36[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c36[aria-disabled='true'] .c10 {
  color: #666687;
}

.c36[aria-disabled='true'] svg > g,.c36[aria-disabled='true'] svg path {
  fill: #666687;
}

.c36[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c36[aria-disabled='true']:active .c10 {
  color: #666687;
}

.c36[aria-disabled='true']:active svg > g,.c36[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c36:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c36:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c36 svg > g,
.c36 svg path {
  fill: #ffffff;
}

.c35 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c35 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 .c10 {
  color: #ffffff;
}

.c35[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c35[aria-disabled='true'] .c10 {
  color: #666687;
}

.c35[aria-disabled='true'] svg > g,.c35[aria-disabled='true'] svg path {
  fill: #666687;
}

.c35[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c35[aria-disabled='true']:active .c10 {
  color: #666687;
}

.c35[aria-disabled='true']:active svg > g,.c35[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c35:hover {
  background-color: #f6f6f9;
}

.c35:active {
  background-color: #eaeaef;
}

.c35 .c10 {
  color: #32324d;
}

.c35 svg > g,
.c35 svg path {
  fill: #32324d;
}

.c23 {
  height: 1px;
  border: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c13 svg > g,
.c13 svg path {
  fill: #8e8ea9;
}

.c13:hover svg > g,
.c13:hover svg path {
  fill: #666687;
}

.c13:active svg > g,
.c13:active svg path {
  fill: #a5a5ba;
}

.c13[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c13[aria-disabled='true'] svg path {
  fill: #666687;
}

.c4 {
  inset: 0;
  background: #32324d1F;
}

.c6 {
  width: 51.875rem;
}

.c8 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c33 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c34 > * + * {
  margin-left: 8px;
}

.c20 {
  border-bottom: 2px solid #4945ff;
}

.c18 {
  border-bottom: 2px solid transparent;
}

.c16[aria-disabled='true'] {
  cursor: not-allowed;
}

.c30 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c30:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c31 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c31::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c31::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c31:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c31::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c31:focus-within {
  outline: none;
}

.c25 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c25 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c25 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c25 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c25 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

<body
  class="lock-body-scroll"
>
  <div>
    <div
      class="c0"
    >
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-log"
        role="log"
      />
      <p
        aria-live="polite"
        aria-relevant="all"
        id="live-region-status"
        role="status"
      />
      <p
        aria-live="assertive"
        aria-relevant="all"
        id="live-region-alert"
        role="alert"
      />
    </div>
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c1 c2 c3 c4"
    >
      <div>
        <div>
          <div
            aria-labelledby="title"
            aria-modal="true"
            class="c1 c5 c6"
            role="dialog"
          >
            <div
              class="c1 c7 c8"
            >
              <div
                class="c1 c9"
              >
                <h2
                  class="c10 c11"
                  id="title"
                >
                  Add new assets
                </h2>
                <button
                  aria-disabled="false"
                  class="c12 c13"
                  type="button"
                >
                  <span
                    class="c14"
                  >
                    Close the modal
                  </span>
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M24 2.417L21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417z"
                      fill="#212134"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div>
              <div
                class="c1 c15"
              >
                <div
                  aria-label="How do you want to upload your assets?"
                  role="tablist"
                >
                  <button
                    aria-disabled="false"
                    aria-selected="false"
                    class="c16"
                    id="32-0-tab"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="c1 c17 c18"
                    >
                      <span
                        class="c10 c19"
                      >
                        From computer
                      </span>
                    </div>
                  </button>
                  <button
                    aria-controls="32-1-tabpanel"
                    aria-disabled="false"
                    aria-selected="true"
                    class="c16"
                    id="32-1-tab"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="c1 c17 c20"
                    >
                      <span
                        class="c10 c21"
                      >
                        From url
                      </span>
                    </div>
                  </button>
                </div>
                <hr
                  class="c1 c22 c23"
                />
              </div>
              <div>
                <div
                  aria-labelledby="32-1-tab"
                  id="32-1-tabpanel"
                  role="tabpanel"
                  tabindex="0"
                >
                  <form
                    action="#"
                    novalidate=""
                  >
                    <div
                      class="c1 c24"
                    >
                      <div
                        class="c25"
                      >
                        <div>
                          <div
                            class="c1 c26 c27"
                          >
                            <div
                              class="c1 c28"
                            >
                              <label
                                class="c10 c29"
                                for="34"
                              >
                                <div
                                  class="c1 c28"
                                >
                                  URL
                                </div>
                              </label>
                            </div>
                            <div
                              class="c30"
                            >
                              <textarea
                                aria-describedby="34-hint"
                                aria-invalid="false"
                                aria-required="false"
                                class="c31"
                                id="34"
                                name="urls"
                              />
                            </div>
                            <p
                              class="c10 c32"
                              id="34-hint"
                            >
                              Separate your URL links by a carriage return.
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c1 c7 c33"
                    >
                      <div
                        class="c1 c9"
                      >
                        <div
                          class="c1 c28 c34"
                        >
                          <button
                            aria-disabled="false"
                            class="c12 c35"
                            type="button"
                          >
                            <span
                              class="c10 c29"
                            >
                              app.components.Button.cancel
                            </span>
                          </button>
                        </div>
                        <div
                          class="c1 c28 c34"
                        >
                          <button
                            aria-disabled="false"
                            class="c12 c36"
                            type="submit"
                          >
                            <span
                              class="c10 c29"
                            >
                              Next
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
